<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jyheo.notification.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_notification"
        android:id="@+id/button_simple_notification"
        android:layout_marginTop="26dp"
        android:onClick="onSimpleNotification" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_notification"
        android:id="@+id/button_notification_action"
        android:onClick="onActionNotificationSpecial" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_notification2"
        android:id="@+id/button_notification_action2"
        android:onClick="onActionNotificationRegular" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_notification"
        android:id="@+id/button"
        android:onClick="onActionButtonNotification" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expandedview_notification"
        android:id="@+id/button2"
        android:onClick="onExpandableNotification" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_notification"
        android:id="@+id/button_notification_progress"
        android:onClick="onProgressNotification" />
</LinearLayout>
